--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,23 @@
-body{
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import './global/global.css';
+@import './utilities/tipografias.css';
+@import './utilities/cores.css';
 
-ul{
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-
-a{
-  text-decoration: none;
-}
-
-.header-bg{
-  background: #000000;
-}
-
-.header{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 20px;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.header-menu{
-  display: flex;
-  gap: 40px;
-  flex-wrap: wrap;
-  
-}
-
-.header-menu a{
-  color: #ffffff;
-  padding: 16px;
-  display: inline-block;
-  font-size: 1.125rem;
-  position: relative;
-}
-
-.header-menu a:after{
-  content: " ";
-  display: block;
-  width: 0%;
-  height: 2px;
-  background: #ffffff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
-
-.header-menu a:hover:after{
-  width: 100%;
-}
+@import './global/header.css'; 
+@import './global/footer.css'; 
 
 
-@media (max-width: 800px){
+/*  Componentes */
+@import './utilities/componentes.css';
 
-  .header-menu{
-    gap: 20px;
-  }
+/* Home */
+@import './home/introducao.css';
+@import './home/tecnologia.css';
+@import './home/parceiros.css';
+@import './home/depoimento.css';
 
-  .header-menu a{
-    background: #111111;
-    padding: 16px 12px;
-    border-radius: 4px;
-  }
-  .header-menu a:hover{
-    background-color: #2e2e2e;
-  }
-  .header-menu a:after{
-    display: none;
-  }
-}
+/* Bicicletas */
+@import './bicicletas/bicicletaslist.css';
 
-@media (max-width: 600px){
-  .header-menu{
-    gap: 12px;
-  }
+/* Seguros */
+@import './seguros/seguros.css'
 
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 14px;
-  }
-}
