--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 
 /*  Componentes */
 @import './utilities/componentes.css';
+@import './utilities/formulario.css';
+
 
 /* Home */
 @import './home/introducao.css';
@@ -17,7 +19,21 @@
 
 /* Bicicletas */
 @import './bicicletas/bicicletaslist.css';
+@import './bicicletas/bicicletas.css';
+
+/* Bicicleta */
+@import './bicicleta/bicicleta.css';
+@import './bicicleta/seguro.css';
 
 /* Seguros */
-@import './seguros/seguros.css'
+@import './seguros/seguros.css';
+@import './seguros/vantagens.css';
+@import './seguros/perguntas.css';  
+
+/* Contato */
+@import './contato/contato.css';
+@import './contato/lojas.css';
+
+/* Termos */
+@import './termos/termos.css'
 
